[package]
authors = ["Xuanwo <github@xuanwo.io>"]
categories = ["command-line-utilities"]
description = "deserialize env into structs via serde"
documentation = "https://docs.rs/serde-env"
repository = "https://github.com/Xuanwo/serde-env"
edition = "2021"
license = "Apache-2.0"
name = "serde-env"
version = "0.1.1"

[dependencies]
serde = "1"
anyhow = "1"
log = "0.4"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
temp-env = "0.3"
env_logger = "0.10"
