[package]
authors = ["Xuanwo <github@xuanwo.io>"]
categories = ["command-line-utilities"]
description = "deserialize env into structs via serde"
documentation = "https://docs.rs/serde-env"
repository = "https://github.com/Xuanwo/serde-env"
edition = "2021"
license = "Apache-2.0"
name = "serde-env"
version = "0.1.1"

[dependencies]
serde = "1"
anyhow = "1"
log = { version = "0.4", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
temp-env = "0.3"
env_logger = "0.10"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
log = ["dep:log"]
[[bench]]
name = "from_env"
harness = false