[package]
authors = ["Xuanwo <github@xuanwo.io>"]
categories = ["command-line-utilities"]
description = "deserialize env into structs via serde"
documentation = "https://docs.rs/serde-env"
repository = "https://github.com/Xuanwo/serde-env"
edition = "2021"
license = "Apache-2.0"
name = "serde-env"
version = "0.2.0"

[dependencies]
serde = "1"
serde_path_to_error = "0.1.16"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_with = { version = "3", features = ["json"] }
temp-env = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "from_env"
harness = false